@@ -2,10 +2,8 @@ package de.tum.in.www1.artemis.web.rest.lecture;
 
 import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
 
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 import jakarta.ws.rs.BadRequestException;
 
@@ -22,6 +20,7 @@ import de.tum.in.www1.artemis.repository.VideoUnitRepository;
 import de.tum.in.www1.artemis.security.Role;
 import de.tum.in.www1.artemis.security.annotations.EnforceAtLeastEditor;
 import de.tum.in.www1.artemis.service.AuthorizationCheckService;
+import de.tum.in.www1.artemis.service.LectureUnitService;
 import de.tum.in.www1.artemis.service.competency.CompetencyProgressService;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 
@@ -42,12 +41,15 @@ public class VideoUnitResource {
 
     private final CompetencyProgressService competencyProgressService;
 
+    private final LectureUnitService lectureUnitService;
+
     public VideoUnitResource(LectureRepository lectureRepository, AuthorizationCheckService authorizationCheckService, VideoUnitRepository videoUnitRepository,
-            CompetencyProgressService competencyProgressService) {
+            CompetencyProgressService competencyProgressService, LectureUnitService lectureUnitService) {
         this.lectureRepository = lectureRepository;
         this.authorizationCheckService = authorizationCheckService;
         this.videoUnitRepository = videoUnitRepository;
         this.competencyProgressService = competencyProgressService;
+        this.lectureUnitService = lectureUnitService;
     }
 
     /**
@@ -84,7 +86,7 @@ public class VideoUnitResource {
 
         checkVideoUnitCourseAndLecture(videoUnit, lectureId);
         normalizeVideoUrl(videoUnit);
-        validateVideoUrl(videoUnit);
+        lectureUnitService.validateUrlStringAndReturnUrl(videoUnit.getSource());
         authorizationCheckService.checkHasAtLeastRoleInCourseElseThrow(Role.EDITOR, videoUnit.getLecture().getCourse(), null);
 
         VideoUnit result = videoUnitRepository.save(videoUnit);
@@ -111,7 +113,7 @@ public class VideoUnitResource {
         }
 
         normalizeVideoUrl(videoUnit);
-        validateVideoUrl(videoUnit);
+        lectureUnitService.validateUrlStringAndReturnUrl(videoUnit.getSource());
 
         Lecture lecture = lectureRepository.findByIdWithLectureUnitsAndAttachmentsElseThrow(lectureId);
         if (lecture.getCourse() == null) {
@@ -125,7 +127,7 @@ public class VideoUnitResource {
         videoUnit.setLecture(lecture);
         lecture.addLectureUnit(videoUnit);
         Lecture updatedLecture = lectureRepository.save(lecture);
-        VideoUnit persistedVideoUnit = (VideoUnit) updatedLecture.getLectureUnits().get(updatedLecture.getLectureUnits().size() - 1);
+        VideoUnit persistedVideoUnit = (VideoUnit) updatedLecture.getLectureUnits().getLast();
 
         competencyProgressService.updateProgressByLearningObjectAsync(persistedVideoUnit);
 
@@ -158,19 +160,4 @@ public class VideoUnitResource {
             videoUnit.setSource(videoUnit.getSource().strip());
         }
     }
-
-    /**
-     * Validates the provided video Url.
-     *
-     * @param videoUnit provided video unit
-     */
-    private void validateVideoUrl(VideoUnit videoUnit) {
-        try {
-            new URL(videoUnit.getSource());
-        }
-        catch (MalformedURLException exception) {
-            throw new BadRequestException();
-        }
-    }
-
 }
